# plugin

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: check.yaml
src/: lib.rs
